style: 스타일 가이드에 맞게 변경